--- a/nd4j-parameter-server-parent/nd4j-parameter-server-client/pom.xml
+++ b/nd4j-parameter-server-parent/nd4j-parameter-server-client/pom.xml
@@ -43,7 +43,7 @@
         <dependency>
             <groupId>com.mashape.unirest</groupId>
             <artifactId>unirest-java</artifactId>
-            <version>1.4.9</version>
+            <version>${unirest.version}</version>
         </dependency>
 
         <dependency>
@@ -82,6 +82,12 @@
         <dependency>
             <groupId>org.nd4j</groupId>
             <artifactId>nd4j-parameter-server</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.nd4j</groupId>
+            <artifactId>nd4j-parameter-server-status_2.10</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
