--- a/nd4j-serde/nd4j-aeron/pom.xml
+++ b/nd4j-serde/nd4j-aeron/pom.xml
@@ -11,7 +11,7 @@
   <parent>
     <groupId>org.nd4j</groupId>
     <artifactId>nd4j-serde</artifactId>
-    <version>0.7.1</version>
+    <version>0.7.2-SNAPSHOT</version>
   </parent>
   <properties>
     <sbe.version>1.5.4</sbe.version>
