--- a/datavec-dataframe/pom.xml
+++ b/datavec-dataframe/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.datavec</groupId>
         <artifactId>datavec-parent</artifactId>
-        <version>0.7.1</version>
+        <version>0.7.2-SNAPSHOT</version>
 
     </parent>
 
