--- a/datavec-local/pom.xml
+++ b/datavec-local/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>datavec-parent</artifactId>
         <groupId>org.datavec</groupId>
-        <version>0.7.1</version>
+        <version>0.7.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
