--- a/deeplearning4j-scaleout/pom.xml
+++ b/deeplearning4j-scaleout/pom.xml
@@ -22,7 +22,7 @@
 	<parent>
 		<groupId>org.deeplearning4j</groupId>
 		<artifactId>deeplearning4j-parent</artifactId>
-		<version>0.7.1-SNAPSHOT</version>
+		<version>0.7.1</version>
 	</parent>
 	<artifactId>deeplearning4j-scaleout</artifactId>
 	<packaging>pom</packaging>
