Update to version 0.7.2-SNAPSHOT
Former-commit-id: 7251a097ffe5822c25b3942d34ed35f4ac3016a8 [formerly ba756244576f9a4d679aa64d0964afe675afd63f]
Former-commit-id: b45a0c8c93020edba2117bb13b134c15bb4034a9

--- a/deeplearning4j-scaleout/dl4j-streaming/pom.xml
+++ b/deeplearning4j-scaleout/dl4j-streaming/pom.xml
@@ -7,12 +7,12 @@
     <groupId>org.deeplearning4j</groupId>
     <artifactId>dl4j-streaming_2.10</artifactId>
     <packaging>jar</packaging>
-    <version>0.7.1</version>
+    <version>0.7.2-SNAPSHOT</version>
 
     <parent>
         <artifactId>deeplearning4j-scaleout</artifactId>
         <groupId>org.deeplearning4j</groupId>
-        <version>0.7.1</version>
+        <version>0.7.2-SNAPSHOT</version>
     </parent>
 
     <properties>
