--- a/deeplearning4j-scaleout/spark/dl4j-spark-parameterserver/pom.xml
+++ b/deeplearning4j-scaleout/spark/dl4j-spark-parameterserver/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>spark_2.10</artifactId>
         <groupId>org.deeplearning4j</groupId>
-        <version>0.7.1</version>
+        <version>0.7.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
