--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.deeplearning4j</groupId>
     <artifactId>deeplearning4j-parent</artifactId>
-    <version>0.7.1</version>
+    <version>0.7.2-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>DeepLearning4j</name>
 
@@ -58,8 +58,8 @@
 
 
     <properties>
-        <nd4j.version>0.7.1</nd4j.version>
-        <datavec.version>0.7.1</datavec.version>
+        <nd4j.version>0.7.2-SNAPSHOT</nd4j.version>
+        <datavec.version>0.7.2-SNAPSHOT</datavec.version>
         <commonsmath.version>3.4.1</commonsmath.version>
         <commonslang.version>3.3.1</commonslang.version>
         <commonsio.version>2.4</commonsio.version>
