--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.deeplearning4j</groupId>
     <artifactId>gym-java-client</artifactId>
-    <version>0.7.1</version>
+    <version>0.7.2-SNAPSHOT</version>
 
     <name>gym-java-client</name>
     <description>A Java client for Open AI's Reinforcement Learning Gym</description>
@@ -37,7 +37,7 @@
         <unirest.version>1.4.9</unirest.version>
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
-        <nd4j.version>0.7.1</nd4j.version>
+        <nd4j.version>0.7.2-SNAPSHOT</nd4j.version>
         <nd4j.backend>nd4j-native</nd4j.backend>
     </properties>
 
