fix imports for jackson

--- a/nd4j-parameter-server-parent/nd4j-parameter-server/pom.xml
+++ b/nd4j-parameter-server-parent/nd4j-parameter-server/pom.xml
@@ -23,7 +23,11 @@
             <artifactId>unirest-java</artifactId>
             <version>${unirest.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.nd4j</groupId>
+            <artifactId>nd4j-jackson</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.slf4j</groupId>
