add new parameter server node and ids end point for status server

--- a/nd4j-parameter-server-parent/pom.xml
+++ b/nd4j-parameter-server-parent/pom.xml
@@ -92,6 +92,7 @@
         <module>nd4j-parameterserver-model</module>
         <module>nd4j-parameter-server-status</module>
         <module>nd4j-parameter-server-rocksdb-storage</module>
+        <module>nd4j-parameter-server-node</module>
     </modules>
 
     <properties>
